# vex-rt-patched

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  README.md  armv7a-vex-eabi.json  rust-toolchain
.cargo/: config.toml
examples/: adi-analog.rs  adi-digital-in.rs  adi-digital-out.rs  adi-digital.rs  adi-motor.rs  async.rs  battery.rs  broadcast.rs  channel.rs  clawbot.rs  controller.rs  delay.rs  distance.rs  encoders.rs  hello-world.rs  imu.rs  motors.rs  panic.rs  promise.rs  queue.rs  rotation.rs  select.rs  select_merge.rs  serial.rs  state-machine.rs  state_machine.rs  task.rs  timeout.rs  ultrasonic.rs
macros/: Cargo.toml
macros/src/: lib.rs  state_machine.rs  util.rs
macros/src/state_machine/: attributes.rs  input.rs  mod.rs
scripts/: upload.sh
src/: allocator.rs  battery.rs  competition.rs  controller.rs  distance.rs  entry_function.rs  error.rs  imu.rs  lib.rs  logger.rs  logging.rs  machine.rs  motor.rs  optical.rs  peripherals.rs  prelude.rs  robot.rs  rotation.rs  serial.rs  smart_port.rs  vexlink.rs
src/adi/: analog.rs  digital.rs  digital_in.rs  digital_out.rs  encoder.rs  expander.rs  gyro.rs  mod.rs  motor.rs  port.rs  ultrasonic.rs
src/async_await/: mod.rs  promise.rs  repository.rs
src/macros/: async_loop.rs  entry.rs  mod.rs  select.rs  state_machine.rs
src/rtos/: broadcast.rs  channel.rs  context.rs  event.rs  instant.rs  loop.rs  mod.rs  mutex.rs  promise.rs  queue.rs  semaphore.rs  task.rs
src/rtos/free_rtos/: mod.rs  mutex.rs  queue.rs  semaphore.rs
src/util/: cstring.rs  mod.rs  ord_weak.rs  owner.rs  shared_set.rs
vex-rt-macros/: Cargo.toml
vex-rt-macros/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
