[package]
name = "vex-rt"
version = "0.14.0"
authors = [
    "Timothy Morland <me@timothy-morland.com>",
    "Nick Mertin <nickmertin@gmail.com>",
    "Jai Agrawal <jaiagr@pm.me>",
    "Eric Dong <aderic6@gmail.com>",
]
edition = "2021"
build = "build/main.rs"
description = "A Rust runtime for the Vex V5 built on top of PROS."
license = "Apache-2.0"
repository = "https://gitlab.com/qvex/vex-rt"

[workspace]
members = ["macros"]

[dependencies]
libc = { version = "0.2.137", default-features = false }
libc-print = "0.1.14"
rcstring = "0.2.1"
spin = "0.9.0"
newlib-alloc = "0.1.0"
cstring-interop = "0.1.0"
by_address = "1.0.4"
owner-monad = "0.1.0"
raii-map = "0.1.0"
queue-model = "0.1.2"
slice-copy = "0.3.0"
vex-rt-macros = { version = "0.1.0", path = "macros" }

[build-dependencies]
bindgen = "0.63.0"
zip = "0.6.2"
zip-extensions = "0.6.0"

[dev-dependencies]
array-init = "2.0.0"
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
num-traits = { version = "0.2.15", default-features = false }
