[package]
name = "vex-rt"
version = "1.0.0-rc.11"
authors = [
    "Timothy Morland <me@timothy-morland.com>",
    "Nick Mertin <nickmertin@gmail.com>",
    "Brett Etter <buzzec@buzzec.net>",
    "Jai Agrawal <jaiagr@pm.me>",
    "Eric Dong <aderic6@gmail.com>",
]
edition = "2021"
build = "build/main.rs"
description = "A Rust runtime for the Vex V5 built on top of PROS."
license = "Apache-2.0"
repository = "https://gitlab.com/qvex/vex-rt"

[workspace]
members = ["macros"]

[dependencies]
bitflags = "1.3.2"
by_address = "1.1.0"
cstring-interop = "0.1.0"
futures = { version = "0.3.25", default-features = false, features = ["alloc", "async-await"], optional = true }
libc = { version = "0.2.139", default-features = false }
libc-print = "0.1.20"
log = { version = "0.4.17", optional = true }
num-traits = { version = "0.2.15", default-features = false }
owner-monad = "0.1.0"
queue-model = "0.1.2"
qunit = { version = "0.1.0-beta.3", default-features = false, features = ["math", "libm"] }
raii-map = "0.1.0"
rcstring = "0.2.1"
replace_with = { version = "0.1.7", default-features = false, features = ["nightly"], optional = true }
slice-copy = "0.3.0"
spin = "0.9.4"
vex-rt-macros = { version = "1.0.0-rc.4", path = "macros" }

[build-dependencies]
bindgen = "0.64.0"
zip = { version = "0.6.3", default-features = false }
zip-extensions = "0.6.1"

[dev-dependencies]
array-init = "2.1.0"
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }

[features]
async-await = ["dep:futures", "dep:replace_with"]
logging = ["dep:log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "async"
required-features = ["async-await"]
