[package]
name = "vex-rt-macros"
version = "0.1.0"
authors = ["Nick Mertin <nickmertin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0.9"
itertools = "0.10.0"

[lib]
proc-macro = true
